--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-3 position-relative d-flex justify-content-center">
                     <div class="stories__img">
-                        <img class="img-fluid" src="./images/image 12.png" alt="">
+                        <img class="img-fluid" src="./images/pexels-terasdondon-31987281.jpg" alt="">
                         <caption>
                             <h5>The many benefits of taking a healing holiday</h5>
                             <p>‘Helaing holidays’ are on the rise 
